--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+body {
+    color: #FBF2C5;
+    background: #9B1D42;
+}
+
+hr {
+    border-top: 1px solid #FBF2C5;
+    width: 100%;
+    margin: 10px 0;
+}
+
 #logo {
     float: left;
     font-size: 280%;
@@ -8,6 +25,12 @@
     color: #FBF2C5;
     background: #9B1D42;
 
+}
+
+h3 {
+    font-family: sans-serif;
+    color: #FBF2C5;
+    background: #9B1D42;
 }
 
 #menu {
@@ -33,12 +56,6 @@
 
 #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
-
-}
-
-td > a > img {
-    height: 90%;
-    width: 90%;
 
 }
 
@@ -74,6 +91,11 @@ footer {
     width: 100%;
 }
 
+#site-intro {
+    padding-top: 150px;
+    padding-left: 30px;
+    border-top: none;
+}
 
 @media screen and (max-width: 905px) {
     #box-art {
