--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,20 +64,22 @@ footer {
     padding: 1%;
 }
 
-.external-links {
+.external-sites {
+    margin-top: 1%;
     text-align: center;
 }
 
-.external-links li {
+.external-sites li {
     display: inline;
     padding: 1%;
+    border-style: solid;
+    border-color: inherit;
 }
 
-.external-links i {
-    font-size: 160%;
-    margin: 1%;
-    padding: 5%;
-    color: #3a3a3a;
+.external-sites a {
+    font-size: 100%;
+    text-decoration: none;
+    color: inherit;
 }
 
 #box-art {
