--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,6 @@ h3 {
 
 #menu, #logo {
     line-height: 75px;
-
 }
 
 #menu li {
@@ -55,7 +54,7 @@ h3 {
 }
 
 #menu a:hover {
-    border-bottom: 1px solid #3a3a3a;
+    border-bottom: 1px solid #FBF2C5;
 
 }
 
@@ -97,6 +96,17 @@ footer {
     padding-top: 150px;
     padding-left: 30px;
     border-top: none;
+}
+
+.game-page {
+    padding-top: 200px;
+    padding-bottom: 50px;
+    margin-left: 30px;
+}
+
+.game-page img {
+    height: 10%;
+    width: 10%;
 }
 
 @media screen and (max-width: 905px) {
