Added styling code to smb game page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
     background: #9B1D42;
 }
 
+
 hr {
     border-top: 1px solid #FBF2C5;
     width: 100%;
@@ -95,19 +96,30 @@ footer {
 #site-intro {
     padding-top: 150px;
     padding-left: 30px;
-    border-top: none;
 }
 
-.game-page {
+#game-page {
+    height: 600px;
+}
+
+.game-page-left{
     padding-top: 200px;
     padding-bottom: 50px;
     margin-left: 30px;
+    width: 33%
 }
 
-.game-page img {
-    height: 10%;
-    width: 10%;
+.game-page-left img {
+    height: 30%;
+    width: 30%;
 }
+
+.game-page-center {
+    width: 33%;
+    margin: 0 auto;
+    border-style: solid;
+}
+
 
 @media screen and (max-width: 905px) {
     #box-art {
