--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,16 +6,24 @@
     border: none;
 }
 
+
 body {
     color: #FBF2C5;
     background: #9B1D42;
 }
 
+div {
+    vertical-align: middle;
+    display: inline-block;
+    width: 30%;
+    padding: 0 10px;
+}
 
 hr {
     border-top: 1px solid #FBF2C5;
     width: 100%;
     margin: 10px 0;
+    clear: both;
 }
 
 #logo {
@@ -98,26 +106,10 @@ footer {
     padding-left: 30px;
 }
 
-#game-page {
-    height: 600px;
-}
 
-.game-page-left{
-    padding-top: 200px;
-    padding-bottom: 50px;
-    margin-left: 30px;
-    width: 33%
-}
-
-.game-page-left img {
+img {
     height: 30%;
     width: 30%;
-}
-
-.game-page-center {
-    width: 33%;
-    margin: 0 auto;
-    border-style: solid;
 }
 
 
