--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,13 @@
     border: none;
 }
 
-
 body {
     color: #FBF2C5;
     background: #9B1D42;
+}
+
+i {
+    color: #FBF2C5;
 }
 
 div {
@@ -17,7 +20,23 @@ div {
     display: inline-block;
     width: 30%;
     padding: 0 10px;
-/*    background-color: blue; */
+    
+}
+
+.release-info > img {
+    margin-left: 30px;
+    height: 40%;
+    width: 40%;
+}
+
+div > table {
+    float: right;
+    margin-right: 20px;
+}
+
+table, tr {
+    border: 1px solid;
+    border-color: inherit;
 }
 
 hr {
@@ -106,13 +125,6 @@ footer {
     padding-top: 150px;
     padding-left: 30px;
 }
-
-
-img {
-    height: 30%;
-    width: 30%;
-}
-
 
 @media screen and (max-width: 905px) {
     #box-art {
