--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ hr {
     width: 100%;
     margin: 10px 0;
     clear: both;
-}
+} 
 
 #logo {
     float: left;
@@ -96,7 +96,7 @@ h3 {
 }
 
 footer {
-    height: 250px;
+    height: auto;
     padding: 1%;
 }
 
@@ -123,6 +123,7 @@ footer {
     line-height: 0;
     column-count: 4;
     column-gap: 0;
+    margin-top: 1%;
 }
 
 #box-art > a > img {
