--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,55 +5,7 @@
     padding: 0;
     border: none;
 }
-
-body {
-    color: #FBF2C5;
-    background: #9B1D42;
-}
-
-div {
-    vertical-align: top;
-    display: inline-block;
-    width: 30%;
-    padding: 0 10px;
-}
-
-p {
-    padding: 1%;
-}
-
-.release-info {
-    width: 20%;
-}
-
-.release-info > img {
-    margin-left: 10px;
-    height: 45%;
-    width: 45%;
-}
-
-.release-info > p {
-    margin-top: 0;
-}
-
-.release-info > table {
-    clear: both;
-    margin-left: 10px;
-}
-
-table, tr {
-    border: 1px solid;
-    border-color: inherit;
-}
-
-
-hr {
-    border-top: 1px solid #9B1D42;
-    width: 100%;
-    margin: 10px 0;
-    clear: both;
-} 
-
+/* Header */
 #logo {
     float: left;
     font-size: 280%;
@@ -62,12 +14,6 @@ hr {
     color: #FBF2C5;
     background: #9B1D42;
 
-}
-
-h3 {
-    font-family: sans-serif;
-    color: #FBF2C5;
-    background: #9B1D42;
 }
 
 #menu {
@@ -94,30 +40,37 @@ h3 {
     border-bottom: 1px solid #FBF2C5;
 
 }
+/* Main body */
+body {
+    color: #FBF2C5;
+    background: #9B1D42;
+}
 
-footer {
-    height: auto;
+div {
+    vertical-align: top;
+    display: inline-block;
+    width: 30%;
+    padding: 0 10px;
+}
+
+p {
     padding: 1%;
 }
 
-.external-sites {
-    margin-top: 1%;
-    text-align: center;
+hr {
+    border-top: 1px solid #9B1D42;
+    width: 100%;
+    margin: 10px 0;
+    clear: both;
+} 
+
+h3 {
+    font-family: sans-serif;
+    color: #FBF2C5;
+    background: #9B1D42;
 }
 
-.external-sites li {
-    display: inline;
-    padding: 1%;
-    border-style: solid;
-    border-color: inherit;
-}
-
-.external-sites a {
-    font-size: 100%;
-    text-decoration: none;
-    color: inherit;
-}
-
+/* Home page */
 #box-art {
     clear: both;
     line-height: 0;
@@ -147,15 +100,107 @@ footer {
     width: inherit;
 }
 
+
+/* Game page */
+
+.release-info {
+    width: 20%;
+}
+
+.release-info > img {
+    margin-left: 10px;
+    height: 45%;
+    width: 45%;
+}
+
+.release-info > p {
+    margin-top: 0;
+}
+
+.release-info > table {
+    clear: both;
+    margin-left: 10px;
+}
+
+table, tr {
+    border: 1px solid;
+    border-color: inherit;
+}
+
+/* footer */
+footer {
+    height: auto;
+    padding: 1%;
+}
+
+.external-sites {
+    margin-top: 1%;
+    text-align: center;
+}
+
+.external-sites li {
+    display: inline;
+    padding: 1%;
+    border-style: solid;
+    border-color: inherit;
+}
+
+.external-sites a {
+    font-size: 100%;
+    text-decoration: none;
+    color: inherit;
+}
+
+/* Form */
+.form-section {
+    clear: left;
+    background: url("https://www.mobygames.com/images/shots/l/588620-super-mario-bros-nes-screenshot-angry-plant.png");
+    background-size: contain;
+    background-repeat: no-repeat; 
+    margin-left: 10%;
+    height: 600px;
+    
+}
+
 .contact-form {
-    margin: 50px 10% 0 0;
+    margin: 5% 10% 0 0;
     color: #fff;
     background-color: rgba(60, 60, 60, 0.6);
     max-width: 400px;
+    position: absolute;
     left: 10%;
     padding: 30px;
 }
 
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+}
+
+.text-input:hover {
+    border-color: #30b3f0;
+}
+
+.send-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #FBF2C5;
+    color: #9B1D42;
+    display: block;
+}
+
+.send-button:hover {
+    background-color: #9B1D42;
+    color: #FBF2C5;
+}
 
 @media screen and (max-width: 1200px) {
     #box-art {
