Added ext sites link function to other pages, added active link code to css file and contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,11 @@
     border-bottom: 1px solid #FBF2C5;
 
 }
+
+.active{
+    border-bottom: 1px solid #FBF2C5;
+}
+
 /* Main body */
 body {
     color: #FBF2C5;
