--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,7 @@ footer {
     }
 
     p {
-        padding: 5%;
+        padding: 1%;
     }
 
     #menu li {
@@ -317,7 +317,7 @@ footer {
     }
 
     iframe {
-        width: auto;
+        width: 100%;
     }
 
 }
