Adjust position of elements for different screen sizes, remove styling code no longer needed for homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,18 +75,6 @@ h3 {
 }
 
 /* Home page */
-#box-art {
-    clear: both;
-    line-height: 0;
-    column-count: 4;
-    column-gap: 0;
-    margin-top: 1%;
-}
-
-#box-art > a > img {
-    width: 100%;
-}
-
 #site-intro {
     padding-left: 30px;
 }
@@ -240,7 +228,7 @@ footer {
     }
 
     #consoles {
-        margin-left: 0;
+        margin-left: 10px;
     }
 
     .release-info > table {
@@ -266,14 +254,14 @@ footer {
         height: auto;
     }
 
+    iframe {
+        margin-left: 10px;
+    }
+
 
 }
 
 @media screen and (max-width: 800px) {
-    #box-art {
-        flex-wrap: wrap;
-    }
-
     #site-intro {
         width: auto;
     }
@@ -318,6 +306,7 @@ footer {
     }
 
     iframe {
+        margin-left: 0;
         width: 100%;
     }
 
@@ -325,10 +314,6 @@ footer {
 
 
 @media screen and (max-width: 500px) {
-    #box-art {
-        flex-wrap: wrap;
-    }
-
     #site-intro {
         width: auto;
     }
@@ -346,6 +331,10 @@ footer {
     div {
         display:block;
         width: auto;
+    }
+
+    #consoles {
+        margin-left: 10px;
     }
 
     #consoles td {
@@ -372,10 +361,21 @@ footer {
     .release-info {
         display: inline-block;
         width: auto;
+        margin-bottom: 5px;
     }
 
     iframe {
         width: 100%;
+        margin-top: 5px;
+        margin-left: 0;
+    }
+
+    .form-section {
+        margin-left: 0;
+    }
+
+    .contact-form {
+        margin-left: 0;
     }
 
 }
