Moved footer heading within the footer tags and centered in rhe css file, added comments to html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,8 +125,12 @@ footer {
     padding: 1%;
 }
 
+footer > h4 {
+    text-align: center;
+}
+
 .external-sites {
-    margin-top: 1%;
+    margin-top: 2%;
     text-align: center;
 }
 
