Added logo secondary font to css file, added more content to readme file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
     float: left;
     font-size: 250%;
     margin-left: 30px;
-    font-family: Bungee;
+    font-family: Bungee, sans-serif;
     color: #FBF2C5;
     background: #9B1D42;
 }
