--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ h3 {
 }
 
 #consoles {
-    margin-left: 10px;
+    margin-left: 50%;
 }
 
 #consoles td {
@@ -229,7 +229,6 @@ footer > h4 {
         margin-left: 30px;
         font-size: 100%;
     }
-
     .form-section {
         margin: 0 25%;
     }
@@ -240,7 +239,6 @@ footer > h4 {
     .games-list {
         margin-left: 30px;
     }
-
 }
 
 @media screen and (max-width: 1090px) {
@@ -306,7 +304,7 @@ footer > h4 {
 @media screen and (max-width: 900px) {
     .form-section {
         margin: 0 20%;
-    }    
+    }
 }
 
 @media screen and (max-width: 800px) {
